<resources>
    <string name="app_name">CommEC Kiosk</string>

    <!-- Common -->
    <string name="main_tab_home">首页</string>
    <string name="main_tab_national">全国</string>
    <string name="main_tab_county">县区</string>
    <string name="main_tab_community">社区</string>
    <string name="main_tab_shop">店铺</string>
    <string name="main_tab_cart">购物车</string>
    <string name="main_tab_return">返回</string>


    <!-- K0.0.0外部畫面 -->
    <string name="main_community_title">电商社区</string>
    <string name="main_government_title">政府职能</string>


    <!-- K1.1.0全國首頁 -->
    <string name="national_">电商社区</string>
    <string name="national_tag">贵妇下午茶特辑</string>
    <string name="national_btn_buy_now">立即选购</string>


    <!-- K2.0.0社區首頁 -->
    <string name="community_">电商社区</string>
    <string name="community_btn_hair">美发动人</string>
    <string name="community_btn_market">商超便利</string>
    <string name="community_btn_food">餐饮外卖</string>
    <string name="community_btn_life">生活服务</string>
    <string name="community_btn_trade">综合买卖</string>
    <string name="community_btn_fruit">生鲜水果</string>
    <string name="community_price">￥ %1$d</string>
    <string name="community_reserve_sales">库存:%1$d/销售:%2$d</string>


    <!-- K2.1.1社區首頁-商品屬性 -->
    <string name="community_goods_attribute_price">￥ %1$d</string>
    <string name="community_goods_attribute_size">尺码</string>
    <string name="community_goods_attribute_color">颜色</string>
    <string name="community_goods_attribute_amount">数量</string>
    <string name="community_goods_attribute_add_to_cart">加入购物车</string>


    <!-- K2.3.0 商品詳情 -->
    <string name="community_goods_detail_shop">商家介绍：%1$s</string>
    <string name="community_goods_detail_price">￥ %1$d</string>
    <string name="community_goods_detail_reserve_sales">库存:%1$d/销售:%2$d</string>
    <string name="community_goods_detail_shop_name">店家名称：%1$s</string>
    <string name="community_goods_detail_btn_comment">全部 评价</string>


    <!-- K4.0.0 店舖首頁 -->
    <string name="shop_goods_total">共有%1$d样商品</string>

    <!-- K4.1.0 店鋪詳情 -->
    <string name="shop_detail_phone">店铺电话：%1$s</string>
    <string name="shop_detail_address">店铺地址：%1$s</string>
    <string name="shop_detail">店铺简介</string>
    <string name="shop_detail_closed">店己超过营业时间</string>
    <string name="shop_detail_detail">店铺简介-</string>


    <!-- K5.0.0 購物車 -->
    <string name="cart_select_all">全选</string>
    <string name="cart_select_num">已选数量:%1$d</string>
    <string name="cart_total">合计: ￥ %1$d</string>
    <string name="cart_btn_settle">结帐</string>
    <string name="cart_btn_del">删除</string>
    <string name="cart_payment_method">付款方式：</string>
    <string name="cart_payment_method_alipay">支付宝支付</string>
    <string name="cart_payment_method_wechat">微信支付</string>
    <string name="cart_payment_method_wallet">余额支付</string>

        <!-- K5.2.0購物車-結帳-餘額支付 -->

        <!-- K5.2.0購物車-結帳-餘額支付 -->
        <string name="cart_payment_method_wallet_enter_phone">输入手机号</string>
        <string name="cart_payment_method_wallet_enter_code">输入验证码</string>
        <string name="cart_payment_method_wallet_btn_send_code">发送验证码</string>
        <string name="cart_payment_method_wallet_notice">不存在该用户信息，\n请先下载兜兜平台app注册成为会员或购买会员卡</string>
        <string name="cart_payment_method_wallet_btn_confirm">确定</string>

        <string name="cart_payment_method_wallet_countdown">%1$s后可重发验证码</string>
        <string name="cart_payment_method_wallet_btn_send_code_again">重送验证码</string>

        <string name="cart_payment_method_wallet_pay_success">支付成功</string>
        <string name="cart_payment_method_wallet_check_message">相关信息将发送至您的手机，请查收</string>
        <string name="cart_payment_method_wallet_amount_spend">消费金额:%1$d</string>

        <!-- K5.2.2購物車-結帳-輸入手機號碼 -->
        <string name="cart_enter_cellphone">請輸入手機號碼</string>
        <string name="cart_enter_cellphone_tips">请输入手机号，以方便货到通知!</string>

        <!-- K5.3.0購物車-結帳-微信支付寶 -->
        <string name="cart_payment_method_wechat_scan_qrcode">请打开微信扫一扫功能，扫描此二维码进行支付</string>

</resources>
