<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/lv_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_cart_bottom" />

    <RelativeLayout
        android:id="@+id/rl_cart_bottom"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/img_shoppingcar_buttombar">

        <CheckBox
            android:id="@+id/cb_select_all"
            android:layout_width="175px"
            android:layout_height="56px"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/cart_select_all"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:button="@drawable/selector_cb_check"
            android:layout_marginLeft="72px" />

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="270px"
            android:layout_height="149px"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/btn_pay"
            android:text="@string/cart_btn_settle"
            android:textColor="@android:color/white"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cart_select_num"
            android:id="@+id/tv_select_num"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_total"
            android:gravity="center_vertical"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cart_total"
            android:id="@+id/tv_total"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_pay"
            android:layout_marginRight="50px"
            android:layout_marginLeft="137px"
            android:gravity="center_vertical"
            android:textSize="48sp" />

    </RelativeLayout>
</RelativeLayout>