<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/lv_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_cart_bottom" />

    <LinearLayout
        android:id="@+id/rl_cart_bottom"
        android:layout_width="match_parent"
        android:layout_height="488px"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/img_shoppingcar_buttombar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_marginTop="10px">

            <TextView
                android:id="@+id/tv_select_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tv_total"
                android:gravity="center_vertical"
                android:text="@string/cart_select_num"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/cart_total"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:layout_marginLeft="155px"
                android:layout_marginRight="47px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10px">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_payment_method"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:layout_marginLeft="50px" />

            <LinearLayout
                android:id="@+id/ll_payment_ali"
                android:layout_width="300px"
                android:layout_height="317px"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:layout_marginLeft="90px"
                android:layout_marginRight="250px">

                <ImageButton
                    android:id="@+id/ibtn_payment_ali"
                    android:layout_width="250px"
                    android:layout_height="250px"
                    android:background="@mipmap/img_icon_ali_pay" />

                <TextView
                    android:id="@+id/tv_payment_ali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_payment_method_alipay"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_payment_wechat"
                android:layout_width="300px"
                android:layout_height="317px"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibtn_payment_wechat"
                    android:layout_width="250px"
                    android:layout_height="250px"
                    android:background="@mipmap/img_icon_we_chat_pay" />

                <TextView
                    android:id="@+id/tv_payment_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_payment_method_wechat"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_payment_wallet"
                android:layout_width="300px"
                android:layout_height="317px"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:layout_marginLeft="250px">

                <ImageButton
                    android:id="@+id/ibtn_payment_wallet"
                    android:layout_width="250px"
                    android:layout_height="250px"
                    android:background="@mipmap/img_icon_wallet_pay" />

                <TextView
                    android:id="@+id/tv_payment_wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_payment_method_wallet"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>