<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_9b9b9b"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="@dimen/community_goods_attribute_dialog_out_w"
        android:layout_height="@dimen/community_goods_attribute_dialog_out_h"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="@dimen/community_goods_attribute_dialog_w"
            android:layout_height="@dimen/community_goods_attribute_dialog_h"
            android:layout_marginTop="20px"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="240px">


                <ImageView
                    android:layout_width="201.4px"
                    android:layout_height="150px"
                    android:id="@+id/imageView2"
                    android:src="@mipmap/img_paysuccess"
                    android:layout_marginLeft="346px"
                    android:layout_marginRight="30.6px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cart_payment_method_wallet_pay_success"
                    android:id="@+id/textView11"
                    android:textColor="@android:color/black"
                    android:textSize="144sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cart_payment_method_wallet_check_message"
                android:id="@+id/textView12"
                android:textColor="@color/color_fb0007"
                android:textSize="36sp"
                android:layout_marginLeft="578px" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="78px"
                android:layout_marginTop="100px"
                android:text="@string/cart_payment_method_wallet_amount_spend"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="72sp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="720px"
                android:layout_height="130px"
                android:text="@string/cart_payment_method_wallet_btn_confirm"
                android:textColor="@android:color/white"
                android:background="@mipmap/btn_orange"
                android:textSize="64sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/ibtn_close"
            android:layout_width="@dimen/community_goods_attribute_btn_close_wh"
            android:layout_height="@dimen/community_goods_attribute_btn_close_wh"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@mipmap/btn_cancel" />
    </RelativeLayout>
</LinearLayout>