<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_9b9b9b"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="@dimen/community_goods_attribute_dialog_out_w"
        android:layout_height="@dimen/community_goods_attribute_dialog_out_h"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="@dimen/community_goods_attribute_dialog_w"
            android:layout_height="@dimen/community_goods_attribute_dialog_h"
            android:layout_marginTop="20px"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_enter_cellphone"
                    android:layout_width="match_parent"
                    android:layout_height="80px"
                    android:layout_marginBottom="40px"
                    android:layout_marginTop="160px"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="160px"
                        android:layout_marginRight="40px"
                        android:text="@string/cart_payment_method_wallet_enter_phone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textSize="48sp" />

                    <EditText
                        android:id="@+id/et_cellphone"
                        android:layout_width="900px"
                        android:layout_height="80px"
                        android:background="@mipmap/img_phonenumsquare"
                        android:ems="14"
                        android:inputType="textAutoComplete"
                        android:textColor="@android:color/black"
                        android:textSize="48sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80px"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="160px"
                    android:layout_marginRight="40px"
                    android:text="@string/cart_payment_method_wallet_enter_code"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="48sp" />

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="650px"
                    android:layout_height="80px"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/tv2"
                    android:background="@mipmap/img_verifycodesquare"
                    android:ems="14"
                    android:inputType="textAutoComplete"
                    android:textColor="@android:color/black"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/btn_code"
                    android:layout_width="220px"
                    android:layout_height="100px"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="30px"
                    android:layout_toRightOf="@+id/et_code"
                    android:background="@mipmap/btn_small_orange"
                    android:textColor="@android:color/white"
                    android:text="@string/cart_payment_method_wallet_btn_send_code" />

                <TextView
                    android:id="@+id/tv_countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="100px"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20px"
                    android:layout_toRightOf="@+id/et_code"
                    android:textColor="@color/color_0000ff"
                    android:text="@string/cart_payment_method_wallet_countdown"
                    android:textSize="36sp"
                    android:visibility="gone" />


            </RelativeLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="210px"
                android:layout_marginTop="20px"
                android:text="@string/cart_payment_method_wallet_notice"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_fb0007"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="720px"
                android:layout_height="130px"
                android:text="@string/cart_payment_method_wallet_btn_confirm"
                android:textColor="@android:color/white"
                android:background="@mipmap/btn_orange"
                android:textSize="64sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/ibtn_close"
            android:layout_width="@dimen/community_goods_attribute_btn_close_wh"
            android:layout_height="@dimen/community_goods_attribute_btn_close_wh"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@mipmap/btn_cancel" />
    </RelativeLayout>
</LinearLayout>